--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,3 +10,31 @@ body{
     text-align: center;
     line-height: 3rem;
 }
+
+.product-img{
+    height: 200px;
+    width: 300px;
+}
+
+.products-container{
+    width: 95%;
+    height: 150vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows:  repeat(6, 1fr);
+    gap: 20px;
+    margin: auto;
+}
+
+.product-div{
+    width: 500px;
+    height: 500px;
+    border: 2px solid black;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
