--- a/src/styles/styles/MainNavigation.moudle.css
+++ b/src/styles/styles/MainNavigation.moudle.css
@@ -3,16 +3,12 @@
     margin: auto;
     padding: 2rem;
     display: flex;
-    justify-content: space-between;
-    background-color: wheat;
+    justify-content: center;
+
+    background-color: whitesmoke;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
- nav{
-    display: flex;
-    justify-content: space-evenly;
-    /* background-color: ; */
-    width:70%;
-    margin: auto;
- }
+
 .list{
     display: flex;
     justify-content: space-between;
@@ -24,12 +20,12 @@
 
 .list a{
     text-decoration: none;
-    color: red;
+    color:black;
 }
 
 .list a:hover,
 .list a:active{
-    color: violet;
+    color:brown;
     text-decoration: underline;
     font-size: 25px;
 }
